--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
 .vscode/c_cpp_properties.json
 .vscode/launch.json
 .vscode/
+speed_test/recv
+speed_test/send
+speed_test/tcp_speeds.log
+test/test
