--- a/.gitignore
+++ b/.gitignore
@@ -1,30 +1,7 @@
-.vscode/c_cpp_properties.json
-.vscode/launch.json
 .vscode/
-speed_test/recv
-speed_test/send
-speed_test/tcp_speeds.log
 test/test
-data_ana/data_product
-data_ana/data_product
-speed_test/tcp_speeds.log
-tcp_pthread/send
-tcp_pthread/recv
-data_ana/a.out
-speed_test/tcp_speeds.log
-speed_test/udp_speeds.log
-test/bit_read
-test/data/c_1.log
-test/data/c_2.log
-test/data/c_3.log
-test/data/c_4.log
-test/data/c_5.log
-test/data/c_6.log
-test/data/c_7.log
-data_analys/send
-data_analys/log/
-data_analys/datalog/
-c++prime/
+*.out
+z_c++prime/
 yan_code/
 *.exe
 
